# serialport

./: build.gradle  gradle.properties
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  device_util.cpp  device_util.h  nlog.h  serialport.cpp  uart_manager.cpp  uart_manager.h
app/src/main/cpp/tai/: ESKF_3dofcute.c  ESKF_3dofcute.h  hmddata_dipatch_taishan.cpp  type_taishan.cpp  type_taishan.h
app/src/main/java/com/ex/serialport/: BaseActivity.java  CmdUtils.java  Main2Activity.java  Main3Activity.java  Main4Activity.java  Main5Activity.java  MainActivity.java
app/src/main/java/com/nolovr/core/data/usb/: UsbBase.java  UsbProxy.java  UsbProxyAgent.java
app/src/main/java/com/nolovr/core/data/usb/config/: Config.java
app/src/main/java/com/nolovr/core/data/usb/serialport/: UartBase.java  UartImpl.java
app/src/main/java/com/nolovr/core/data/usb/utils/: CRC8.java  CmdUtils.java  FileDataUtils.java  HexDump.java  LogUtil.java  LogUtilAgent.java  NamedThreadFactory.java
app/src/main/res/layout/: activity_main.xml  activity_main2.xml  activity_main3.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
serialport/: build.gradle
serialport/src/main/java/android_serialport_api/: SerialPort.java
serialport/src/main/java/tp/xmaihh/serialport/: SeriaFdlHelper.java  SerialFileHelper.java  SerialHelper.java
serialport/src/main/java/tp/xmaihh/serialport/bean/: ComBean.java
serialport/src/main/java/tp/xmaihh/serialport/stick/: BaseStickPackageHelper.java  SpecifiedStickPackageHelper.java
serialport/src/main/java/tp/xmaihh/serialport/utils/: C2JUtils.java  CheckUtils.java
serialport/src/main/jni/: SerialPort.c
